fix z-index for hero

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ nav a:hover {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, .4);
+  z-index: 0;
 }
 
 .hero img {
@@ -148,6 +149,7 @@ nav a:hover {
   text-align: center;
   overflow-y: auto;
   z-index: 1;
+  background-color: transparent;
 }
 
 
